// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View job status by jobid handler should return correct job status if the job is found. 1`] = `
Object {
  "jobid": "jobid1",
  "jobname": "jobname1",
  "owner": "owner1",
  "rc": 0,
  "status": "success",
}
`;

exports[`View job status by jobid handler should return correct job status if the job is found. 2`] = `
Object {
  "fields": Array [
    "jobname",
    "jobid",
    "owner",
    "status",
    "rc",
  ],
  "format": "object",
  "output": Object {
    "jobid": "jobid1",
    "jobname": "jobname1",
    "owner": "owner1",
    "rc": 0,
    "status": "success",
  },
}
`;
